<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/boldB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bold" />

        <Button
            android:id="@+id/italB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italic" />

        <Button
            android:id="@+id/normB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintText" >

        <requestFocus />
    </EditText>

</LinearLayout>
